# esp32-temperature-telemetry-platform

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
data/samples/: m1_reference_capture.csv  m1_reference_capture.jsonl  m2_binary_reference.csv  m2_binary_reference.jsonl  m2_jsonl_v2_device_reference.jsonl
deploy/: README.md
deploy/systemd/: README.md
desktop/: CMakeLists.txt  README.md
desktop/common/: CMakeLists.txt
desktop/common/include/: project_types.hpp  replay_source.hpp
desktop/packet_codec/: CMakeLists.txt
desktop/packet_codec/include/: packet_codec.hpp
desktop/packet_codec/src/: packet_codec.cpp
desktop/qt_monitor/: CMakeLists.txt
desktop/qt_monitor/include/: main_window.hpp  monitor_session.hpp  trend_widget.hpp
desktop/qt_monitor/src/: main.cpp  main_window.cpp  monitor_session.cpp  trend_widget.cpp
desktop/serial_link/: CMakeLists.txt
desktop/serial_link/include/: serial_link.hpp
desktop/serial_link/src/: serial_link.cpp
desktop/telemetry_service/: CMakeLists.txt
desktop/telemetry_service/include/: telemetry_service_app.hpp  telemetry_store.hpp
desktop/telemetry_service/src/: main.cpp  telemetry_service_app.cpp  telemetry_store.cpp
firmware/: README.md
firmware/esp32_s3_node/: CMakeLists.txt  Kconfig.projbuild  README.md  sdkconfig  sdkconfig.defaults
firmware/esp32_s3_node/main/: CMakeLists.txt  app_main.cpp
tests/: README.md
tools/: README.md
tools/scripts/: bootstrap.ps1  capture_qt_screenshots.ps1  desktop_build.ps1  desktop_configure.ps1  device_config_tool.py  idf_env.ps1  idf_rebuild.ps1  prepare_public_bundle.ps1  requirements-serial.txt  run_desktop_demo.ps1  run_desktop_smoke.ps1  run_stability_capture.ps1  summarize_stability_run.py  uart_capture.py
(+16 files in other folders)
